styles/components/gallery/_aside.scss
// scss-lint:disable PropertySortOrder
@mixin gallery-paddings {
    padding-left: $column-gutter/2;
    padding-right: $column-gutter/2;
}

.gallery__aside {

    @media #{$small-only} {
        padding-left: 0;
        padding-right: 0;
    }

    @media #{$large-up} {
        width: $gallery-aside-large-width;
        position: absolute;
        right: 0;
        padding-left: $column-gutter;
        padding-right: $column-gutter;
        padding-top: 20px;
    }

    .gallery__break {
        margin-bottom: 30px;
        width: 65px;
        height: 3px;
        margin-left: $column-gutter/2;
        background: $color-primary;
    }

    // scss-lint:disable SelectorFormat
    .gallery__subSection {
        @include gallery-paddings;
        color: $color-primary;
        font-family: $font-family-sans-serif-primary;
        font-size: 11px;
        font-weight: 500;
        letter-spacing: .04em;
        padding: 0;
        text-transform: uppercase;
    }
    // scss-lint:enable SelectorFormat

    .gallery__summary {
        color: $color-grey-darker;
        font-size: 20px;
        padding: 0 15px;

        @media #{$medium-up} {
            padding: 0;
        }

        @media #{$large-up} {
            box-sizing: border-box;
            height: 100%;
            margin-bottom: -290px;
            padding: 0 0 300px;
        }

        @media #{$large-up} {

            .gallery__summary-content {
                height: 100%;
                overflow-x: hidden;
                overflow-y: auto;
            }
        }

        p {
            color: $color-grey-dark;
            font-size: 14px;
            line-height: 1;
            margin-bottom: 25px;
            padding: 0;
        }
    }

    .gallery__summary-text {
        padding-right: 5px;

        p {
            letter-spacing: .01em;
            line-height: 1.75;

            @media #{$medium-only} {
                font-size: 16px;
                line-height: 1.875;
            }

            @media #{$large-up} {
                line-height: 1.9;
            }
        }
    }

    .gallery__date {
        color: $silver;
        display: none;
        font-family: $font-family-sans-serif;
        font-size: 14px;
        font-weight: 400;
        padding-top: 6px;
        padding-bottom: 5px;
    }

    .ad--native-logo {
        color: $silver;
        text-align: left;
        padding: 0;

        &:after {
            border-bottom: 3px solid $color-primary;
            content: '';
            display: block;
            margin: 20px 0;
            width: 100%;
        }
    }

    &-ad {
        clear: both;
        margin: 0 auto 40px;
        position: relative;
        width: 320px;

        @media #{$medium-up} {
            padding-left: 0;
        }

        @media #{$large-up} {
            @include gallery-paddings;
            bottom: 20px;
            margin-bottom: 0;
            max-height: 270px;
            padding-left: 0;
            position: absolute;
            width: 300px;
        }
    }
}

